--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <resources>
     <!--  Base  -->
+    <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
     <color name="softGrey">#f5f5f5</color>
     <color name="grey">#dadada</color>
@@ -7,7 +8,11 @@
     <color name="darkerGrey">#717171</color>
     <color name="dark">#303030</color>
     <color name="black">#181818</color>
-    <color name="newStory">#deb92c</color>
+
+
+
+    <color name="newStory">#deb92c</color> <!-- Mihai : ? -->
+
     <!--  Theme  -->
     <color name="primary">#1aa19b</color>
 </resources>
