--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
-    <style name="AppTheme.Activity.Button" parent="Base.Widget.AppCompat.Button.Borderless">
+    <style name="AppTheme.Button" parent="Base.Widget.AppCompat.Button.Borderless">
         <item name="android:paddingTop">18dp</item>
         <item name="android:paddingBottom">18dp</item>
         <item name="android:layout_marginTop">15dp</item>
@@ -21,6 +21,21 @@
         <item name="android:textColor">@color/darkGrey</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">sans-serif</item>
+    </style>
+    <style name="AppTheme.Button.Primary">
+        <item name="android:background">@color/primary</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="AppTheme.Form">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_marginTop">25dp</item>
+    </style>
+    <style name="AppTheme.TextInput">
+        <item name="android:inputType">textCapSentences|textAutoCorrect</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginBottom">5dp</item>
     </style>
 
     <!--
@@ -38,11 +53,27 @@
         <item name="android:fontFamily">sans-serif-thin</item>
         <item name="android:textSize">20sp</item>
         <item name="android:padding">1dp</item>
+        <item name="background">@color/transparent</item>
+    </style>
+    <style name="AppTheme.Activity.WhiteHeader">
+        <item name="android:background">@color/white</item>
+        <item name="android:paddingTop">@dimen/header_vertical_padding</item>
+        <item name="android:paddingBottom">@dimen/header_vertical_padding</item>
+        <item name="android:paddingLeft">@dimen/header_horizontal_padding</item>
+        <item name="android:paddingRight">@dimen/header_horizontal_padding</item>
+    </style>
+    <style name="AppTheme.Activity.WhiteHeader.Title">
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">1dp</item>
+        <item name="background">@color/transparent</item>
     </style>
     <style name="AppTheme.Activity.Header.BackBtn">
         <item name="android:layout_width">@dimen/header_back_btn_width</item>
         <item name="android:layout_height">@dimen/header_back_btn_height</item>
         <item name="android:layout_marginRight">30dp</item>
+        <item name="background">@color/transparent</item>
     </style>
 
     <!--
@@ -55,13 +86,6 @@
         <item name="android:paddingLeft">@dimen/list_item_horizontal_padding</item>
         <item name="android:background">@color/white</item>
     </style>
-    <!--<style name="AppTheme.ListItem.Theme">
-        <item name="android:padding">1dp</item>
-        <item name="android:layout_alignParentTop">true</item>
-        <item name="layout_alignParentEnd">true</item>
-        <item name="fontFamily">sans-serif-medium</item>
-    </style>-->
-
 
     <!--
       ~~ Dialog
