--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,8 +14,8 @@
         <item name="android:windowNoTitle">true</item>
     </style>
     <style name="AppTheme.Button" parent="Base.Widget.AppCompat.Button.Borderless">
-        <item name="android:paddingTop">18dp</item>
-        <item name="android:paddingBottom">18dp</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">15dp</item>
         <item name="android:layout_marginTop">15dp</item>
         <item name="android:background">@color/grey</item>
         <item name="android:textColor">@color/darkGrey</item>
@@ -26,16 +26,19 @@
         <item name="android:background">@color/primary</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="AppTheme.Button.Primary.WithBorder">
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:background">@drawable/button_border</item>
+    </style>
     <style name="AppTheme.Form">
-        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_width">275dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:layout_marginTop">25dp</item>
+        <item name="android:paddingTop">25dp</item>
+        <item name="android:paddingBottom">60dp</item>
     </style>
     <style name="AppTheme.TextInput">
         <item name="android:inputType">textCapSentences|textAutoCorrect</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:layout_marginBottom">5dp</item>
     </style>
 
     <!--
