--- a/app/src/main/res/layout/activity_read_story.xml
+++ b/app/src/main/res/layout/activity_read_story.xml
@@ -23,18 +23,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TITLE YOLO"
-                android:textColor="@color/primary"/>
+                android:textColor="@color/primary"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="by: AUTHORS" />
+                android:text="by: AUTHORS"
+                android:textStyle="italic"/>
 
         </LinearLayout>
 
         <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:background="@drawable/mytogglebutton"
+            style="@style/AppTheme.ToggleStars"/>
 
     </LinearLayout>
 
