--- a/app/src/main/res/layout/activity_story_editor.xml
+++ b/app/src/main/res/layout/activity_story_editor.xml
@@ -3,10 +3,74 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    style="@style/AppTheme.Activity">
+
+    <!-- Header -->
+    <include layout="@layout/white_header_frame_layout"/>
+
+    <!-- Content -->
+    <RelativeLayout
+        android:layout_height="match_parent"
+        style="@style/AppTheme.Form">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/darkGrey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp">
+
+                <EditText
+                    android:id="@+id/story_creator_title_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/story_creator_title_hint"
+                    style="@style/AppTheme.TextInput"
+                    />
+            </android.support.design.widget.TextInputLayout>
 
 
+            <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/darkGrey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp">
+
+                <EditText
+                    android:id="@+id/story_creator_character_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/story_creator_character_hint"
+                    style="@style/AppTheme.TextInput"/>
+            </android.support.design.widget.TextInputLayout>
 
 
+            <!-- Theme Selection -->
+            <Spinner
+                android:id="@+id/story_creator_theme_select"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/themes_array"
+                android:textAlignment="center"
+                android:layout_marginTop="22dp"
+                style="@style/AppTheme.Spinner.Primary"/>
 
+        </LinearLayout>
+
+        <!-- Next -->
+        <Button
+            android:id="@+id/story_creator_next_btn"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/story_creator_next_btn"
+            style="@style/AppTheme.Button"/>
+    </RelativeLayout>
 </LinearLayout>
