--- a/app/src/main/res/layout/activity_story_editor.xml
+++ b/app/src/main/res/layout/activity_story_editor.xml
@@ -14,59 +14,46 @@
         android:layout_height="match_parent"
         style="@style/AppTheme.Form">
 
+        <!-- Sentence Input Container -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            style="@style/AppTheme.SentenceInputContainer">
 
-            <android.support.design.widget.TextInputLayout
-                android:textColorHint="@color/darkGrey"
+            <!-- Sentence Input -->
+            <EditText
+                android:id="@+id/story_editor_sentence_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp">
+                android:inputType="textMultiLine"
+                android:maxLines="5"
+                style="@style/AppTheme.SentenceInput"/>
 
-                <EditText
-                    android:id="@+id/story_creator_title_input"
-                    android:layout_width="match_parent"
+            <!-- Infos -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/AppTheme.SentenceInfoContainer">
+
+                <!-- Theme -->
+                <TextView
+                    android:id="@+id/story_editor_theme_info"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="@string/story_creator_title_hint"
-                    style="@style/AppTheme.TextInput"
-                    />
-            </android.support.design.widget.TextInputLayout>
+                    android:textStyle="bold"/>
 
-
-            <android.support.design.widget.TextInputLayout
-                android:textColorHint="@color/darkGrey"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp">
-
-                <EditText
-                    android:id="@+id/story_creator_character_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/story_creator_character_hint"
-                    style="@style/AppTheme.TextInput"/>
-            </android.support.design.widget.TextInputLayout>
-
-
-            <!-- Theme Selection -->
-            <Spinner
-                android:id="@+id/story_creator_theme_select"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/themes_array"
-                android:textAlignment="center"
-                android:layout_marginTop="22dp"
-                style="@style/AppTheme.Spinner.Primary"/>
-
+                <!-- Number of Words remaining -->
+                <TextView
+                    android:id="@+id/story_editor_word_counter_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
         </LinearLayout>
 
         <!-- Next -->
         <Button
-            android:id="@+id/story_creator_next_btn"
+            android:id="@+id/story_editor_submit_btn"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
