--- a/app/src/main/res/layout/white_header_frame_layout.xml
+++ b/app/src/main/res/layout/white_header_frame_layout.xml
@@ -7,21 +7,21 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
         <LinearLayout
-            android:id="@+id/story_chooser_back_lyt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:paddingLeft="30dp">
 
-            <ImageView
+            <ImageButton
+                android:id="@+id/app_header_arrow_btn"
                 style="@style/AppTheme.Activity.Header.BackBtn"
                 android:background="@drawable/green_back_arrow"/>
         </LinearLayout>
         <TextView
-            style="@style/AppTheme.Activity.WhiteHeader.Title"
+            android:id="@+id/app_header_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/story_chooser_header_title" />
+            style="@style/AppTheme.Activity.WhiteHeader.Title" />
     </LinearLayout>
 </FrameLayout>
