--- a/app/src/main/res/layout/white_header_frame_layout.xml
+++ b/app/src/main/res/layout/white_header_frame_layout.xml
@@ -11,12 +11,13 @@
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
-            android:paddingLeft="30dp">
+            android:paddingLeft="30dp"
+            android:id="@+id/app_header_arrow_btn">
 
-            <ImageButton
-                android:id="@+id/app_header_arrow_btn"
+            <ImageView
+                android:background="@drawable/green_back_arrow"
                 style="@style/AppTheme.Activity.Header.BackBtn"
-                android:background="@drawable/green_back_arrow"/>
+                />
         </LinearLayout>
         <TextView
             android:id="@+id/app_header_title"
