--- a/app/src/main/res/drawable/white_button_with_border.xml
+++ b/app/src/main/res/drawable/white_button_with_border.xml
@@ -6,3 +6,16 @@
         android:color="@color/primary"
         />
 </shape>
+
+
+<!--
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+    <solid android:color="@color/grey" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/darkGrey"/>
+</shape>
+
+-->
+
